--- a/index.css
+++ b/index.css
@@ -15,6 +15,20 @@ p {
   margin-top: 0.1em;
   margin-bottom: 0em;
 }
+button {
+  border-radius: 50% 50%;
+  background-color: orange;
+  width: 3em;
+  height: 3em;
+  font-size: 2em;
+}
+
+a button{
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+}
+
 .toggle-holder{
   display: flex;
   flex-direction: column;
@@ -87,12 +101,12 @@ input[type="checkbox"]:focus{
 }
 
 .emoji-mad .toggle ~ .emoji:before {
-  content: "😐";
+  content: "😡";
   margin: -0.3em;
   font-size: 10em;
 }
 .emoji-mad .toggle:checked ~ .emoji:before {
-  content: "😡";
+  content: "😐";
 }
 
 .emoji-love .toggle ~ .emoji:before {
@@ -104,7 +118,7 @@ input[type="checkbox"]:focus{
   content: "😍";
 }
 
-@media only screen and (min-width: 300px) {
+@media (max-width: 700px) and (min-width: 300px) {
   .toggle-holder{
     justify-content: space-around;
     height: 50vh;
